# lab3c-OOP

./: .gitignore  CMakeLists.txt  PCB.cpp  PCB.h  PCB.hpp  actions.cpp  dialog.cpp  dialog.h  dialog.hpp  main.cpp
GTESTS/: CMakeLists.txt  test.cpp
